--- a/website/index.html
+++ b/website/index.html
@@ -55,7 +55,7 @@
 <link rel="stylesheet" id="bootstrapcss-css" href="./css/bootstrap.min76f3.css?ver=5.7.3" type="text/css" media="all"/>
 <link rel="stylesheet" id="fontawesome-css" href="./css/font-awesome.min76f3.css?ver=5.7.3" type="text/css" media="all"/>
 <link rel="stylesheet" id="slick-css" href="./css/slick76f3.css?ver=5.7.3" type="text/css" media="all"/>
-<link rel="stylesheet" id="google_fonts-css" href="http://web.archive.org/web/20211030044730cs_/https://fonts.googleapis.com/css?family=Montserrat:300,400,600,700,800&amp;subset=latin&amp;display=swap" type="text/css" media="all"/>
+<link rel="stylesheet" id="google_fonts-css" href="https://fonts.googleapis.com/css?family=Montserrat:300,400,600,700,800&amp;subset=latin&amp;display=swap" type="text/css" media="all"/>
 <link rel="stylesheet" id="maincss-css" href="./css/mainbcd0.css?v=1635569251&amp;ver=5.7.3" type="text/css" media="all"/>
 <link rel="stylesheet" id="affaricss-css" href="./css/affaribcd0.css?v=1635569251&amp;ver=5.7.3" type="text/css" media="all"/>
 <script type="text/javascript" src="./js/jquery.min9d52.js?ver=3.5.1" id="jquery-core-js"></script>
